fix: complete admin CRUD and fix compilation errors